appId: mindsgn.studio.pockt
---
- launchApp
- tapOn:
    id: "action-send"
- tapOn:
    id: "destination-input"
- inputText: "0x73932cc65df8865b10F339D6Ef9dE5E4830C14Ff"
- tapOn:
    id: "amount-input"
- inputText: "1"
- tapOn:
    id: "send-button"
- tapOn:
    id: "pin-auth-input"
- inputText: "55555"
- tapOn:
    id: "pin-auth-confirm"
